[package]
name = "mighty_mule_gate"
version = "0.1.0"
authors = ["Myles Empty Best <myles@empty.best>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Annoying that this won't compile on non-Linux...
gpio-cdev = "0.2"
http = "0.2"
url = "2.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
